maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:11: error: ';' expected but 'else' found.
      else if (random3()==2){
      ^